# ericpko-dev

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  package.json  tailwind.config.js
assets/: blog.css  main.css
content/blogs/: blog-post-3.md  blog-post4.md  blog1.md  blog2.md  how-i-made-this-website.md  trading-plan.md
src/: api.rs  errors.rs  main.rs  router.rs  routes.rs  state.rs  templates.rs
src/handlers/: blog.rs
styles/: tailwind.css
templates/: blog.html  blogs.html  footer.html  index.html  layout.html  navbar.html  projects.html
