[package]
name = "ericpko-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
chrono = "0.4"
comrak = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.46"
shuttle-runtime = "0.46"
tokio = "1.28"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower-livereload = "0.9"
